added the p5.serialport library next to the ml5 library in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- ml5 and p5.js CDN links -->
     <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
+    <script language="javascript" type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5.serialserver@0.0.28/lib/p5.serialport.js"></script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
